# tk-2022

./: .gitignore  README.md  package-lock.json  package.json  start.bat  start.ps1
.github/workflows/: cpp.yml  elixir.yml  flask.yml  node.yml
body_server/: __main__.py  body_module.py  check_json.py  create_app.py  pbii.py  requirements.txt
body_server/test/: test_module.py
docker/: docker-compose.yml
docker/cpp/: Dockerfile
docker/elixir/: Dockerfile
docker/node/: Dockerfile
docker/python/: Dockerfile
elixir_server/: README.md  mix.exs  run.bat
elixir_server/lib/: elixir_server.ex
elixir_server/test/: elixir_server_test.exs
format_server/: __main__.py  check_json.py  create_app.py  format_module.py  pbii.py  requirements.txt
format_server/test/: test_module.py
node_servers/: jest.config.js  package-lock.json  package.json
node_servers/tests/: filesFinder.test.ts  main.test.ts  metadata.test.ts
people_server/: CMakeLists.txt  conanfile.txt
people_server/src/: PeopleDetector.cpp  PeopleDetector.hpp  peopleServer.cpp  processRequest.cpp  processRequest.hpp
people_server/test/: peopleTest.cpp
server/: .gitignore  jest.config.js  package-lock.json  package.json
server/src/: app.ts  index.ts
server/tests/: example.test.ts  filesFinder.test.ts  main.test.ts  metadata.test.ts  (+2 more)
style_server/: __main__.py  check_json.py  create_app.py  style_module.py
text_server/: README.md  mix.exs
ui/: .prettierrc  README.md  jest.config.cjs  package-lock.json  package.json
weather_server/: __main__.py  check_json.py  create_app.py  main.py  requirements.txt  weather_module.py
(+58 files in other folders)
